fix: overflow hidden to Slider

--- a/Debuggez-une-application-React.JS-main/src/containers/Slider/style.scss
+++ b/Debuggez-une-application-React.JS-main/src/containers/Slider/style.scss
@@ -5,12 +5,13 @@
   width: 100%;
   max-width: 1440px;
   height: 586px;
+  overflow: hidden;
   .SlideCard {
     width: 100%;
     left: 0;
     top: 0;
     position: absolute;
-    transition: opacity 1s;
+    transition: opacity 1s;    
     &--hide {
       opacity: 0;
     }
